resolves an issue with the vertical alignment of the text in the form buttons
git-svn-id: http://svn.osqa.net/svnroot/osqa/trunk@1188 0cfe37f9-358a-4d5e-be75-b63607b5c754

--- a/forum/skins/default/media/style/style.css
+++ b/forum/skins/default/media/style/style.css
@@ -1694,7 +1694,8 @@ div.comment-tools a:hover {
 
 .comment-form-buttons input {
     width: 100%;
-    height: 22px;
+    height: auto;
+    padding: 2px 0 4px 0;
     vertical-align: middle;
     margin-top: 6px;
 }
